--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                         <p>Web developer</p>
                         <p class="date">1995-Current</p>
                         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa aliquam
-                                nemo
-                                quia nesciunt iste possimus? Alias, odit cumque nobis error eos eius eum! Rem asperiores
-                                facere recusandae repudiandae iure!</span>
-                            <h4>
-                                Desarrollador web (2010-2019)
-                            </h4>
-                            <p>Facebook Inc.</p>
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolore labore, adipisci
-                                perspiciatis blanditiis laboriosam architecto consequuntur rerum asperiores porro,
-                                officiis,
-                                quis ipsam excepturi? Suscipit maxime voluptatum facere harum consectetur?</span>
+                            nemo
+                            quia nesciunt iste possimus? Alias, odit cumque nobis error eos eius eum! Rem asperiores
+                            facere recusandae repudiandae iure!</span>
+                        <h4>
+                            Desarrollador web (2010-2019)
+                        </h4>
+                        <p>Facebook Inc.</p>
+                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolore labore, adipisci
+                            perspiciatis blanditiis laboriosam architecto consequuntur rerum asperiores porro,
+                            officiis,
+                            quis ipsam excepturi? Suscipit maxime voluptatum facere harum consectetur?</span>
                     </div>
             </div>
             <div class="software-info">
@@ -87,7 +87,8 @@
 
         <div class="content">
             <div class="img-container">
-                <img id="img-user" class="circle-img" src="../Assets/Logo_Hackademy.png">
+                <img id="img-user" class="circle-img"
+                    src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/51236031_2202635393133963_6046388202632118272_o.jpg?_nc_cat=103&ccb=3&_nc_sid=09cbfe&_nc_eui2=AeFxBBomqK6PIeOuV3khsIs8LN8JEYWqgkos3wkRhaqCSkGSTPrcLU7cxmwVgobxE95sNk4fS717eX-bNFFE8pK8&_nc_ohc=xsnXs88lteoAX-RkFIX&_nc_ht=scontent-dfw5-1.xx&oh=09bead1a1278c16878917da060b62ded&oe=606436C8">
             </div>
             <h2 class="h2-a" id="name-user">Ivan</h2>
             <div class="description-txt">
@@ -107,18 +108,41 @@
                 </div>
                 <div class="line-a"></div>
             </div>
-            <p class="p-a">Aptitudes:</p>
+
+            <p class="p-a">Birth Date:</p>
+            <span class="p-a">30/09/1998</span>
+            <p class="p-a">Adress:</p>
+            <span class="p-a">Los Mochis Sinaloa</span>
+            <p class="p-a">Phone:</p>
+            <span class="p-a">6681933275</span>
+            <p class="p-a">Email:</p>
+            <span class="p-a">ejemplo@hotmail.com</span>
+            <p class="p-a">Web Site:</p>
+            <span class="p-a">www.ejemplo.com</span>
 
             <div class="line-a"></div>
 
-            <p class="p-a">Idiomas:</p>
-            <li class="li-a">
-                <ul> Ejemplo 1 </ul>
-                <ul> Ejemplo 2</ul>
-                <ul> Ejemplo 3 alv</ul>
-                <ul> Ejemplo 4</ul>
-                <ul> Ejemplo 5 alv</ul>
-            </li>
+            <div class="social-net">
+                <div class="linked-icon">
+                    <a href=""> <i class="fab fa-linkedin "></i>
+                    </a>
+                </div>
+                <div class="fa-icon">
+                    <a href=""> <i class="fab fa-facebook-square"></i></a>
+                </div>
+                <div class="twi-icon">
+                    <a href=""> <i class="fab fa-twitter-square "></i> </a>
+                </div>
+                <div class="git-icon">
+                    <a href=""><i class="fab fa-github-square "></i></a>
+                </div>
+
+
+
+
+
+
+            </div>
         </div>
 
         <!-- Comienza la barra de educacion -->
@@ -133,17 +157,17 @@
                         <p>Web developer</p>
                         <p class="date">1995-Current</p>
                         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa aliquam
-                                nemo
-                                quia nesciunt iste possimus? Alias, odit cumque nobis error eos eius eum! Rem asperiores
-                                facere recusandae repudiandae iure!</span>
-                            <h4>
-                                Desarrollador web (2010-2019)
-                            </h4>
-                            <p>Facebook Inc.</p>
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolore labore, adipisci
-                                perspiciatis blanditiis laboriosam architecto consequuntur rerum asperiores porro,
-                                officiis,
-                                quis ipsam excepturi? Suscipit maxime voluptatum facere harum consectetur?</span>
+                            nemo
+                            quia nesciunt iste possimus? Alias, odit cumque nobis error eos eius eum! Rem asperiores
+                            facere recusandae repudiandae iure!</span>
+                        <h4>
+                            Desarrollador web (2010-2019)
+                        </h4>
+                        <p>Facebook Inc.</p>
+                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolore labore, adipisci
+                            perspiciatis blanditiis laboriosam architecto consequuntur rerum asperiores porro,
+                            officiis,
+                            quis ipsam excepturi? Suscipit maxime voluptatum facere harum consectetur?</span>
                     </div>
             </div>
             <div class="software-info">
