cambios en index y formulario

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </head>
 
 <body class="body">
+    <a href="/form_curriculum/form_curriculum.html" class="float-btn">
+        <i class="far fa-edit icon-float"></i>
+        </a>
+        
     <div class="container">
         <div class="experience">
             <div class="works-info">
@@ -52,31 +56,6 @@
                         <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste similique fugit quos
                             ducimus voluptatum velit quas, modi est ipsum, facere blanditiis explicabo quisquam sint
                             reprehenderit aut tempora. Repellendus, exercitationem ipsum.</span>
-                        <h4>
-                            Desarrollador web (2010-2019)
-                        </h4>
-                        <p>Facebook Inc.</p>
-                        <ul class="ul-b">
-                            <li> Ejemplo 1 </li>
-                            <li> Ejemplo 2</li>
-                            <li> Ejemplo 3 alv</li>
-                            <li> Ejemplo 4</li>
-                            <li> Ejemplo 5 alv</li>
-                            </li>
-                        </ul>
-
-                        <h4>
-                            Desarrollador web (2010-2019)
-                        </h4>
-                        <p>Facebook Inc.</p>
-                        <ul class="ul-b">
-                            <li> Ejemplo 1 </li>
-                            <li> Ejemplo 2</li>
-                            <li> Ejemplo 3 alv</li>
-                            <li> Ejemplo 4</li>
-                            <li> Ejemplo 5 alv</li>
-                            </li>
-                        </ul>
                     </div>
 
             </div>
@@ -185,28 +164,6 @@
                         <h4>
                             Desarrollador web (2010-2019)
                         </h4>
-                        <p>Facebook Inc.</p>
-                        <ul class="ul-b">
-                            <li> Ejemplo 1 </li>
-                            <li> Ejemplo 2</li>
-                            <li> Ejemplo 3 alv</li>
-                            <li> Ejemplo 4</li>
-                            <li> Ejemplo 5 alv</li>
-                            </li>
-                        </ul>
-
-                        <h4>
-                            Desarrollador web (2010-2019)
-                        </h4>
-                        <p>Facebook Inc.</p>
-                        <ul class="ul-b">
-                            <li> Ejemplo 1 </li>
-                            <li> Ejemplo 2</li>
-                            <li> Ejemplo 3 alv</li>
-                            <li> Ejemplo 4</li>
-                            <li> Ejemplo 5 alv</li>
-                            </li>
-                        </ul>
                     </div>
 
             </div>
