--- a/index.html
+++ b/index.html
@@ -69,21 +69,13 @@
                 <img id="img-user" class="circle-img"
                     src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/51236031_2202635393133963_6046388202632118272_o.jpg?_nc_cat=103&ccb=3&_nc_sid=09cbfe&_nc_eui2=AeFxBBomqK6PIeOuV3khsIs8LN8JEYWqgkos3wkRhaqCSkGSTPrcLU7cxmwVgobxE95sNk4fS717eX-bNFFE8pK8&_nc_ohc=xsnXs88lteoAX-RkFIX&_nc_ht=scontent-dfw5-1.xx&oh=09bead1a1278c16878917da060b62ded&oe=606436C8">
             </div>
-            <h2 class="h2-a" id="name-user">Ivan</h2>
+            <h2 class="h2-a" id="name-user">Ivan Felix</h2>
+            <h3 class="subtitle">Web Developer</h4>
             <div class="description-txt">
                 <div>
-                    <p class="p-a">Contacto:</p>
-                    <li class="li-a">
-                        <ul><i class="far fa-envelope"></i>
-                            <p id="email-user">ejemplo@gmail.com </p>
-                        </ul>
-                        <ul> <i class="fas fa-phone"></i>
-                            <p id="phone-user"> </p>
-                        </ul>
-                        <ul><i class="fas fa-map-marked-alt"> </i>
-                            <p id="dress-user"></p>
-                        </ul>
-                    </li>
+                   <p>
+                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto et, similique ea architecto provident alias ducimus asperiores amet aut impedit numquam necessitatibus, veritatis nemo. Aut maxime sit sapiente cumque accusantium.
+                   </p>
                 </div>
                 <div class="line-a"></div>
             </div>
