conexion con el backend en formulario

--- a/form_curriculum/form_curriculum.html
+++ b/form_curriculum/form_curriculum.html
@@ -51,7 +51,8 @@
       <div class="renglon">
         <i class="fab fa-linkedin i"></i>
         <input class="input-a" id="linked-user" placeholder="Linkedin.." />
-      </div><div class="renglon">
+      </div>
+      <div class="renglon">
         <i class="fab fa-github-square i"></i>
         <input class="input-a" id="git-user" placeholder="GitHub.." />
       </div><div class="renglon">
