Ya jalan las imagenes

--- a/form_curriculum/form_curriculum.html
+++ b/form_curriculum/form_curriculum.html
@@ -50,17 +50,17 @@
 
       <div class="renglon">
         <i class="fab fa-linkedin i"></i>
-        <input class="input-a" id="linked-user" placeholder="Linkedin.." />
+        <input class="input-a" id="linked-user" placeholder="Username linkedin.." />
       </div>
       <div class="renglon">
         <i class="fab fa-github-square i"></i>
-        <input class="input-a" id="git-user" placeholder="GitHub.." />
+        <input class="input-a" id="git-user" placeholder="GitHub Username.." />
       </div><div class="renglon">
         <i class="fab fa-twitter-square i"></i>       
-        <input class="input-a" id="twitter-user" placeholder="Twitter.." />
-      </div><div class="renglon">
+        <input class="input-a" id="twitter-user" placeholder="Twitter Username.." />
+      </div><div class="renglon">   
         <i class="fab fa-facebook-square i"></i>
-        <input class="input-a" id="fb-user" placeholder="Facebook.." />
+        <input class="input-a" id="fb-user" placeholder="Facebook Username.." />
       </div>
       <button class="boton-guardar" onclick="update_data()">
         Guardar cambios
