ya jala el index

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 
         <div class="content">
             <div class="img-container">
-                <img id="img-user" class="circle-img"
-                    src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/51236031_2202635393133963_6046388202632118272_o.jpg?_nc_cat=103&ccb=3&_nc_sid=09cbfe&_nc_eui2=AeFxBBomqK6PIeOuV3khsIs8LN8JEYWqgkos3wkRhaqCSkGSTPrcLU7cxmwVgobxE95sNk4fS717eX-bNFFE8pK8&_nc_ohc=xsnXs88lteoAX-RkFIX&_nc_ht=scontent-dfw5-1.xx&oh=09bead1a1278c16878917da060b62ded&oe=606436C8">
+                <img id="img-user" class="circle-img">
             </div>
             <h2 class="h2-a" id="name-user"></h2>
             <h3 class="subtitle" id="profesion">Web Developer</h4>
@@ -98,10 +97,10 @@
                     </a>
                 </div>
                 <div class="fa-icon">
-                    <a href=""> <i class="fab fa-facebook-square"></i></a>
+                    <a href="" id="fb-user"> <i class="fab fa-facebook-square"></i></a>
                 </div>
                 <div class="twi-icon">
-                    <a href=""> <i class="fab fa-twitter-square "></i> </a>
+                    <a href="" id="twitter-user"> <i class="fab fa-twitter-square "></i> </a>
                 </div>
                 <div class="git-icon">
                     <a href="" id="git-user"><i class="fab fa-github-square "></i></a>
@@ -120,24 +119,10 @@
         <div class="education">
             <div class="works-info">
                 <div class="line-a"></div>
-                <h2 class="h2-b">Education:</h1>
+                <h2 class="h2-b">Education:</h2>
                     <div class="line-a"></div>
-                    <div>
-                        <h4>Ubuntu Inc. </h4>
-                        <p>Web developer</p>
-                        <p class="date">1995-Current</p>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa aliquam
-                            nemo
-                            quia nesciunt iste possimus? Alias, odit cumque nobis error eos eius eum! Rem asperiores
-                            facere recusandae repudiandae iure!</span>
-                        <h4>
-                            Desarrollador web (2010-2019)
-                        </h4>
-                        <p>Facebook Inc.</p>
-                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolore labore, adipisci
-                            perspiciatis blanditiis laboriosam architecto consequuntur rerum asperiores porro,
-                            officiis,
-                            quis ipsam excepturi? Suscipit maxime voluptatum facere harum consectetur?</span>
+                    <div id="school-list">
+                      
                     </div>
             </div>
             <div class="software-info">
