todos los metodos get para selects terminados

--- a/form_curriculum/form_curriculum.html
+++ b/form_curriculum/form_curriculum.html
@@ -65,6 +65,10 @@
       <button class="boton-guardar" onclick="update_data()">
         Guardar cambios
       </button>
+
+      <button  class="boton-eliminar" onclick="cancel();">
+        Cancelar
+      </button>
     </div>
     <div class="content">
       <div class="schoolar-info">
