completo crud selects

--- a/form_curriculum/form_curriculum.html
+++ b/form_curriculum/form_curriculum.html
@@ -78,11 +78,11 @@
             </select>
             <div class="add-work" id="add_work">
               <label for="new-work">Name </label>
-              <input class="input-a" id="new_work" placeholder="Work.." />
+              <input class="input-a" id="new-work" placeholder="Work.." />
               <label for="job_name">Job</label>
-              <input  type="text" class="input-a" id="job_name" placeholder="Work.." />
+              <input  type="text" class="input-a" id="job-name" placeholder="Work.." />
               <label for="description-work">Job description</label>
-              <textarea class="textarea" id="description_work" cols="50" rows="5"></textarea>
+              <textarea class="textarea" id="description-work" cols="50" rows="5"></textarea>
               <button id="btn-add-work" class="boton-add" onclick="add_work();">Añadir</button>
               </div>
         
