git hub pages en index actualizado

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="body" onload="llenarInfo();">
-    <a href="/form_curriculum/form_curriculum.html" class="float-btn">
+    <a href="https://ivancfelix.github.io/curriculumProject/form_curriculum/form_curriculum.html" class="float-btn">
         <i class="far fa-edit icon-float"></i>
         </a>
         
